--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^12.4.7",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.15.1",
     "swiper": "^9.1.1",
     "typescript": "5.0.2"
   },
